# tgf-detector-front-end-sim

./: .gitignore  README.md  config.yaml
examples/: run_demo.py
geant4_sim/: CMakeLists.txt
geant4_sim/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SimulationConfig.hh  SteppingAction.hh
geant4_sim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SimulationConfig.cc  SteppingAction.cc  main.cc
python_engine/: config_loader.py  generate_synthetic_edep.py  pulse_synthesizer.py  signal_models.py
spice_sim/: post_probe_anode_chain.cir  post_probe_dynode_chain.cir  toy_internal_stage.cir
